[tool.poetry]
name = "example-app"
version = "0.1.0"
description = ""
authors = ["Hju Kneyck Flores <hjucode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
starlite = "^1.20.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
