[tool.poetry]
authors = ["Hju Kneyck Flores <hjucode@gmail.com>"]
description = ""
name = "example-app"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
starlite = "^1.20.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
